# otus-feature-store

./: README.md  feast_feature_views_demo.ipynb  pyproject.toml
feature_store/feature_repo/: feature_repo.py
